# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2010
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.xx
DATE 0x/xx/2010
37th Alpha Release

NEWS:

NEW: [features/enhancements]
+Add support for DSP56K assembly
+Add support for OOC programming language

BUG FIXES:
+Fix bug in style sheet parsing that was not properly setting undefined style
tags to the default_style.
+Fix encoding detection issue that could lead to unhanded exception error.
+Fix handling of Unicode text by Django lexer.

#-----------------------------------------------------------------------------#

VERSION 0.5.72
DATE 06/24/2010
36th Alpha Release

NEWS:
This release addresses a critical bug in the handling of HTML/XML files.

BUG FIXES:
+Fix error in HTML autocompletion.
+Fix application icon not showing up on Windows Vista and 7.
+Fix spellchecker dependencies missing in Windows binary builds.

#-----------------------------------------------------------------------------#

VERSION 0.5.70
DATE 06/12/2010
35th Alpha Release

NEWS:

NEW: [features/improvements]
+Improved TCL/Tk Highlighting
+Updated CodeBrowser Plugin 1.1 (improved Tcl/Tk, C, and CSS Support)
+Update Launch Plugin 1.7 (word wrap and lock file options)
+Improved AutoIndent functionality for HTML/XML
+Improve behavior of HTML autocomp

LIBRARY:
+Syntax modules that provide AutoIndenters are now responsible for adding the
text to the buffers them self instead of returning a string to the EditraStc.

BUG FIXES:
+Fix braces not getting un-highlighted when toggling setting on and off.
+Fix incorrect handling of xml in IPC server (patch from rqsall)
+Fix file open from commandline not respecting open files in new windows option.
+Fix incorrect closer notifications that could occur when using the close tab shortcut.
+Fix crash that could occur due to Python autocompletion executing a SystemExit exception.